<resources>
    <string name="app_name">User Management</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email Address</string>
    <string name="username">User Name</string>
    <string name="password">password</string>
    <string name="login_button">login</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="create_new_account">create new account</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
</resources>
