<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_preview_image"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity">


    <EditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#0FFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#0FFFFF"
        app:layout_constraintEnd_toEndOf="@+id/first_name"
        app:layout_constraintStart_toStartOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#00FFFF"
        app:layout_constraintEnd_toEndOf="@+id/last_name"
        app:layout_constraintStart_toStartOf="@+id/last_name"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#00FFFF"
        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#00FFFF"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="#FFFFFF"
        android:textColorHint="#00FFFF"
        app:layout_constraintEnd_toEndOf="@+id/email_address"
        app:layout_constraintStart_toStartOf="@+id/email_address"
        app:layout_constraintTop_toBottomOf="@+id/email_address" />

    <RadioGroup
        android:id="@+id/radio_group"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_number">

        <RadioButton
            android:id="@+id/male_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/male"
            android:textColor="#00FFFF" />

        <RadioButton
            android:id="@+id/female_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="monospace"
            android:text="@string/female"
            android:textColor="#00FFFF" />
    </RadioGroup>

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#25B82B"
        android:fontFamily="monospace"
        android:text="@string/register"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/radio_group"
        app:layout_constraintStart_toStartOf="@+id/radio_group"
        app:layout_constraintTop_toBottomOf="@+id/radio_group" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerbtn"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>